@@ -1,0 +1,3 @@
+runtime:
+  requires:
+    ExtUtils::Builder::AutoDetect::C: 0.012
